# portfel-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: amount.rs  crypt.rs  error.rs  fx.rs  main.rs  portfolio.rs  xtb.rs
