[package]
name = "portfel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
serde_yaml = "0.9.27"
telnet = "0.2.1"
thiserror = "1.0.50"
tokio = { version = "1.35.0", features = ["rt", "macros"] }
tokio-native-tls = "0.3.1"
