[package]
name = "portfel"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
clap = { version = "4.4.11", features = ["derive"] }
directories = "5.0.1"
env_logger = "0.10.1"
good_lp = { version = "1.7.0", features = ["minilp"], default_features = false }
log = "0.4.20"
openssl = "0.10.61"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
rpassword = "7.3.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
telnet = "0.2.1"
thiserror = "1.0.50"
tokio = { version = "1.35.0", features = ["rt", "macros", "rt-multi-thread"] }
tokio-native-tls = "0.3.1"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
